{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 193,
  "lineage": "3373b54d-0fd9-cb75-8948-7e50e7edaf1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fccab91b456acc2",
            "arn": "arn:aws:ec2:us-east-1:374821970250:instance/i-045d4d1e6d0873033",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile_1",
            "id": "i-045d4d1e6d0873033",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-080e013472274ff21",
            "private_dns": "ip-10-0-1-249.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-107-23-237-31.compute-1.amazonaws.com",
            "public_ip": "107.23.237.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-042860124a90053d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abaca5e36c342af5",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-bastion-ec2",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-bastion-ec2",
              "Project": "Small-Project-devops-102"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8f3ba1e3294fe4f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_internet_gateway.main",
            "aws_route.public_internet_access",
            "aws_route_table.public",
            "aws_security_group.bastion-ssh",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fccab91b456acc2",
            "arn": "arn:aws:ec2:us-east-1:374821970250:instance/i-0acc66b30dc289ac1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile_1",
            "id": "i-0acc66b30dc289ac1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "first_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-050f28acbe36bea46",
            "private_dns": "ip-10-0-2-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06810065a5def89ea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc394d4926708100",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "Small-Project-devops-102"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8f3ba1e3294fe4f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.bastion_profile",
            "aws_iam_role.bastion_role",
            "aws_security_group.bastion-ssh",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:internet-gateway/igw-05b20b0bf44a5bb70",
            "id": "igw-05b20b0bf44a5bb70",
            "owner_id": "374821970250",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-gateway",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-gateway",
              "Project": "Small-Project-devops-102"
            },
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05b20b0bf44a5bb70",
            "id": "r-rtb-0cb4f7f33f5d714fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb4f7f33f5d714fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:route-table/rtb-0a3fe76f9ec7ecf08",
            "id": "rtb-0a3fe76f9ec7ecf08",
            "owner_id": "374821970250",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "Small-Project-devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:route-table/rtb-0cb4f7f33f5d714fb",
            "id": "rtb-0cb4f7f33f5d714fb",
            "owner_id": "374821970250",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "Small-Project-devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f6f210a948bf606",
            "route_table_id": "rtb-0a3fe76f9ec7ecf08",
            "subnet_id": "subnet-0bc394d4926708100"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043df04495dd3e73b",
            "route_table_id": "rtb-0cb4f7f33f5d714fb",
            "subnet_id": "subnet-0abaca5e36c342af5"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:security-group/sg-0a8f3ba1e3294fe4f",
            "description": "allow ssh to ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a8f3ba1e3294fe4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-ssh_bastion",
            "name_prefix": "",
            "owner_id": "374821970250",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Project": "Small-Project-devops-102"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:subnet/subnet-0bc394d4926708100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc394d4926708100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374821970250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "Small-Project-devops-102"
            },
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:subnet/subnet-0abaca5e36c342af5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abaca5e36c342af5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374821970250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "Small-Project-devops-102"
            },
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:vpc/vpc-00a8ada6a2f04ac5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cc50c4905e6aae75",
            "default_route_table_id": "rtb-00385c676bd4a0aa0",
            "default_security_group_id": "sg-0f94ba759f00f5155",
            "dhcp_options_id": "dopt-00c91e6d96a2b2c68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a8ada6a2f04ac5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00385c676bd4a0aa0",
            "owner_id": "374821970250",
            "tags": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "Small-Project-devops-102"
            },
            "tags_all": {
              "Contact": "ebaykal2266@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "Small-Project-devops-102"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpc_gateway_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:374821970250:vpc-endpoint/vpce-06740c2d6ecf12145",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-06740c2d6ecf12145",
            "owner_id": "374821970250",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0a3fe76f9ec7ecf08"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-00a8ada6a2f04ac5e"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}